--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -16,6 +17,7 @@
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "uuid": "^9.0.0"
   }
 }
