--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
     "prisma": "^4.12.0",
     "react": "18.2.0",
