--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1"
   }
 }
