--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.3.0",
+    "next-connect": "^0.13.0",
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
