--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.62.0",
+    "styled-components": "^5.3.10",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   }
